--- a/index.html
+++ b/index.html
@@ -1,112 +1,110 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-     <meta charset="UTF-8" />
-     <title>Sample Blog</title>
-     <link rel="stylesheet"  href="css/normalize.css">
-     <link rel="stylesheet"  href="css/style.css">
-   </head>
-   <body>
-    <div class="all">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Sample Blog</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <div class="all">
     <header>
       <div class="container">
         <div class="header-title-area">
-          <h1 class="logo">Sample Biog</h1>
-       </div>
-      <div>
-
-    <ul class="header-navigation">
-      <li><a href="#">ホーム</a></li>
-      <li><a href="#">カテゴリ一覧</a></li>
-      <li><a href="#">お問い合わせ</a><li>
-    </ul>
-    </header>
+          <h1 class="logo">Sample Blog</h1>
+           </div>
+          <div>
+        </header>
+          <ul class="header-navigation">
+            <li><a href="#">ホーム</a></li>
+            <li><a href="#">カテゴリ一覧</a></li>
+            <li><a href="#">お問い合わせ</a></li>
+          </ul>
     <div class="main">
       <div class="container">
-         <div class="left-contents">
-           <div class="card-contents">
+        <div class="left-contents">
+          <div class="card-contents">
             <div class="staff-image">
-            <button>
-            <img src="image/coffe_staff1.jpeg"class="staff-image"width="140"height="140">
-            </button>
-          </div>
-             <p class="description1"> 2017年05月29日</p>
-             <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
-             <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
-                ここにブログの概要が入ります。</p>
-          <div class="staff-image">
-            <button>
-            <img src="image/coffe_staff1.jpeg"class="staff-image"width="140"height="140">
-            </button>
-          </div>
-             <p class="description1"> 2017年05月29日</p>
-             <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
-             <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
-                ここにブログの概要が入ります。</p>
-          <div class="staff-image">
-            <button>
-            <img src="image/coffe_staff1.jpeg"class="staff-image"width="140"height="140">
-            </button>
-          </div>
-             <p class="description1">2017年05月29日</p>
-             <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
-             <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
-                ここにブログの概要が入ります。</p>
+              <button>
+                <img src="image/coffe_staff1.jpeg" class="staff-image" width="140" height="140">
+              </button>
+              </div>
+            <p class="description1"> 2017年05月29日</p>
+            <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
+            <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
+              ここにブログの概要が入ります。</p>
+            <div class="staff-image">
+              <button>
+                <img src="image/coffe_staff1.jpeg" class="staff-image" width="140" height="140">
+              </button>
+            </div>
+            <p class="description1"> 2017年05月29日</p>
+            <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
+            <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
+              ここにブログの概要が入ります。</p>
+            <div class="staff-image">
+              <button>
+                <img src="image/coffe_staff1.jpeg" class="staff-image" width="140" height="140">
+              </button>
+            </div>
+            <p class="description1">2017年05月29日</p>
+            <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
+            <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
+              ここにブログの概要が入ります。</p>
         </div>
-      </div>
+        </div>
         <div class="right-contents">
           <div class="card-contents">
-             <h1 class="text-title">新着記事</h1>
-             <div class="staff-image">
-             <button>
-             <img src="image/coffe_staff1.jpeg"class="staff-image"width="50"height="50">
-             </button>
-             </div>
-             <p> 2017年05月19日</p>
-             <h3>サンプルブログタイトル</h3>
-             </div>
-             <div class="staff-image">
-             <button>
-             <img src="image/coffe_staff1.jpeg"class="staff-image"width="50"height="50">
-             </button>
-             </div>
-             <p> 2017年05月19日</p>
-             <h3>サンプルブログタイトル</h3>
-             </div>
-             <div class="staff-image">
-             <button>
-             <img src="image/coffe_staff1.jpeg"class="staff-image"width="50"height="50">
-             </button>
-             </div>
-             <p> 2017年05月19日</p>
-             <h3>サンプルブログタイトル</h3>
-             </div>
-             <div class="staff-image">
-             <button>
-             <img src="image/coffe_staff1.jpeg"class="staff-image"width="50"height="45">
-             </button>
-             </div>
-             <p> 2017年05月19日</p>
-             <h3>サンプルブログタイトル</h3>
-             </div>
-             <div class="staff-image">
-             <button>
-             <img src="image/coffe_staff1.jpeg"class="staff-image"width="50"height="50">
-             </button>
-             </div>
-             <p> 2017年05月19日</p>
-             <h3>サンプルブログタイトル</h3>
-             </div>
-             </div>
+            <p class="text-title2">新着記事</p>
+            <hr class="bar1">
+            <div class="staff-image">
+              <button>
+                <img src="image/coffe_staff1.jpeg" class="staff-image" width="60" height="60">
+              </button>
             </div>
-         </div>
-       </div>
+            <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+          <div class="staff-image">
+            <button>
+              <img src="image/coffe_staff1.jpeg" class="staff-image" width="60" height="60">
+            </button>
+          </div>
+          <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+        <div class="staff-image">
+          <button>
+            <img src="image/coffe_staff1.jpeg" class="staff-image" width="60" height="60">
+          </button>
+        </div>
+        <p> 2017年05月19日</p>
+        <p class="title2">サンプルブログタイトル</p>
+      <div class="staff-image">
+        <button>
+          <img src="image/coffe_staff1.jpeg" class="staff-image" width="60" height="60">
+        </button>
       </div>
+      <p> 2017年05月19日</p>
+      <p class="title2">サンプルブログタイトル</p>
+    <div class="staff-image">
+      <button>
+        <img src="image/coffe_staff1.jpeg" class="staff-image" width="60" height="60">
+      </button>
     </div>
+    <p> 2017年05月19日</p>
+    <p class="title2">サンプルブログタイトル</p>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
   <div class="main">
     <footer>
-    <p class="copyright">(C) 2017 Tech Stas Academy</p>
-  </footer>
+      <hr class="bar2">
+      <p class="copyright">(C) 2017 Tech Stas Academy</p>
+    </footer>
   </div>
- </body>
- </html>
+</body>
+
+</html>
