--- a/index.html
+++ b/index.html
@@ -22,66 +22,70 @@
             <li><a href="#">カテゴリ一覧</a></li>
             <li><a href="#">お問い合わせ</a></li>
           </ul>
-       <div class="main">
-        <div class="container">
-         <div class="left-contents">
-          <div class="card-contents">
-            <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image"width="130" height="130">
-            </div>
-             <p class="description1"> 2017年05月29日</p>
-             <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
-             <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
-              ここにブログの概要が入ります。</p>
-            <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image" width="130" height="130">
-            </div>
-             <p class="description1"> 2017年05月29日</p>
-             <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
-             <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
-              ここにブログの概要が入ります。</p>
-            <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image" width="130" height="130">
-            </div>
-             <p class="description1">2017年05月29日</p>
-             <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
-             <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
-              ここにブログの概要が入ります。</p>
-            </div>
+    <div class="main">
+     <div class="container">
+      <div class="left-contents">
+       <div class="card-contents">
+        <div class="staff-image1">
+         <img src="image/coffe_staff1.jpeg"width="145" height="145">
+        </div>
+          <p class="description1"> 2017年05月29日</p>
+          <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
+          <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
+             ここにブログの概要が入ります。</p>
+         <div class="staff-image1">
+          <img src="image/coffe_staff1.jpeg"width="145" height="145">
          </div>
+          <p class="description1"> 2017年05月29日</p>
+          <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
+          <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
+            ここにブログの概要が入ります。</p>
+         <div class="staff-image1">
+          <img src="image/coffe_staff1.jpeg"width="145" height="145">
          </div>
+          <p class="description1">2017年05月29日</p>
+          <p class="title">ブログタイトルがここに入ります。ブログタイトルがここに入ります。</p>
+          <p class="description2">ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。ここにブログの概要が入ります。
+             ここにブログの概要が入ります。</p>
          </div>
+       </div>
+      </div>
+     </div>
+         <div class="main">
+         <div class="container">
          <div class="right-contents">
            <div class="card-contents">
-             <p class="text-title2">新着記事</p>
-             <hr class="bar1">
-             <div class="staff-image">
-               <img src="image/coffe_staff1.jpeg" class="staff-image" width="50" height="50">
-          </div>
-             <p> 2017年05月19日</p>
-             <p class="title2">サンプルブログタイトル</p>
-            <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image" width="50" height="50">
-          </div>
-            <p> 2017年05月19日</p>
-            <p class="title2">サンプルブログタイトル</p>
-          <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image" width="50" height="50">
-          </div>
-           <p> 2017年05月19日</p>
-           <p class="title2">サンプルブログタイトル</p>
-          <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image" width="50" height="50">
-          </div>
-           <p> 2017年05月19日</p>
-           <p class="title2">サンプルブログタイトル</p>
-          <div class="staff-image">
-              <img src="image/coffe_staff1.jpeg" class="staff-image" width="50" height="50">
-          </div>
-           <p> 2017年05月19日</p>
-           <p class="title2">サンプルブログタイトル</p>
+            <p class="text-title2">新着記事</p>
+            <hr class="bar1">
+        <div class="staff-image2">
+          <img src="image/coffe_staff1.jpeg"width="50" height="50">
+        </div>
+          <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+        <div class="staff-image2">
+          <img src="image/coffe_staff1.jpeg"width="50" height="50">
+        </div>
+          <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+        <div class="staff-image2">
+          <img src="image/coffe_staff1.jpeg"width="50" height="50">
+        </div>
+          <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+        <div class="staff-image2">
+          <img src="image/coffe_staff1.jpeg"width="50" height="50">
+        </div>
+          <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+        <div class="staff-image2">
+          <img src="image/coffe_staff1.jpeg"width="50" height="50">
+        </div>
+          <p> 2017年05月19日</p>
+          <p class="title2">サンプルブログタイトル</p>
+        </div>
        </div>
-       </div>
+     </div>
+    </div>
     <footer>
       <hr class="bar2">
       <p class="copyright">(C) 2017 Tech Stas Academy</p>
